Add references for thorium energy and molten salt reactors to bibliography

--- a/poster.bib
+++ b/poster.bib
@@ -1,4 +1,57 @@
-@article{RoomT, title={Room temperature multiferroicity in a transition metal dichalcogenide}, volume={7(54)}, DOI={10.1038/s41699-023-00416-x}, number={54}, journal={npj 2D Materials and Applications}, author={Cardenas-Chirivi, G. and Vega-Bustos, K. and Rojas-Páez, H. and Silvera-Vega, D. and Pazos, J. and Herrera, O. and Macías, M. A. and Espejo, C. and López-Pérez, W. and Galvis, J. A. and et al.}, year={2023}} 
+%Este proyecto
 
-@article{Ferroelectric_MoTe2, title={Room-temperature ferroelectricity in Mote2 down to the atomic monolayer limit}, volume={10}, DOI={10.1038/s41467-019-09669-x}, number={1}, journal={Nature Communications}, author={Yuan, Shuoguo and Luo, Xin and Chan, Hung Lit and Xiao, Chengcheng and Dai, Yawei and Xie, Maohai and Hao, Jianhua}, year={2019} } 
-@article{Ferromagnetic_MoSe2, title={Phase-transfer induced room temperature ferromagnetic behavior in 1T@2H-MoSe2 nanosheets}, volume={7}, DOI={10.1038/srep45307}, number={1}, journal={Scientific Reports}, author={Xia, Baorui and Wang, Tongtong and Xiao, Wen and Zhang, Rongfang and Liu, Peitao and Ding, Jun and Gao, Daqiang and Xue, Desheng}, year={2017}} 
+@book{TMSR_book,
+   title =     {Molten Salt Reactors and Thorium Energy},
+   author =    {Thomas James Dolan},
+   publisher = {Woodhead Publishing},
+   isbn =      {9780081011263},
+   year =      {2017},
+   edition =   {1},
+}
+
+@techreport{IAEA2005,
+  title        = {Thorium Fuel Cycle — Potential Benefits and Challenges},
+  author       = "{{International} {Atomic} {Energy} {Agency}}",
+  year         = 2005,
+  address      = {Vienna, Austria},
+  number       = {IAEA-TECDOC-1450},
+  isbn         = {92-0-103405-9},
+  issn         = {1011-4289},
+}
+  institution  = {{International} {Atomic} {Energy} {Agency}},
+  url          = {https://www.iaea.org/publications/7196/thorium-fuel-cycle-potential-benefits-and-challenges}
+
+@techreport{roadmap,
+  author       = {Si, Shengyi},
+  title        = {Roadmap Design for Thorium-Uranium Breeding Recycle in PWR},
+  year         = {2011},
+  institution  = {International Atomic Energy Agency (IAEA)},
+  publisher    = {IAEA},
+  address      = {Vienna, Austria},
+}
+
+@article{N_Improvement,
+title = {Improvement of LWR thermal margins by introducing thorium},
+journal = {Progress in Nuclear Energy},
+  volume = {61},
+  pages = {48-56},
+  year = {2012},
+  issn = {0149-1970},
+  doi = {https://doi.org/10.1016/j.pnucene.2012.07.004},
+  author = {Cheuk Wah Lau and Christophe Demazière and Henrik Nylén and Urban Sandberg}
+}
+
+@misc{Donev2024,
+  author       = {J.M.K.C. Donev and others},
+  title        = {Energy Education},
+  year         = 2024,
+  url          = {https://energyeducation.ca},
+  note         = {Accessed: 2024}
+}
+
+@misc{OpenMC,
+  author       = {{OpenMC Documentation}},
+  title        = {OpenMC},
+  year         = 2023,
+  note         = {Accessed: 2023-10-25}
+}
