Update figure captions for clarity and reference formatting in poster.tex

--- a/poster.tex
+++ b/poster.tex
@@ -99,7 +99,7 @@ fw.garcia@uniandes.edu.co}
 
   \begin{center}
     \includegraphics[scale=0.25]{Th_breeding.png}
-    \captionof{figure}{\footnotesize \(\prescript{233}{}{U}\) breeding from \(\prescript{232}{}{Th}\). Image from \cite{Donev2024}}
+    \captionof{figure}{\footnotesize \(\prescript{233}{}{U}\) breeding from \(\prescript{232}{}{Th}\). Image retrive from \textbf{Ref.} \cite{Donev2024}}
   \end{center}
 }
 
@@ -109,13 +109,13 @@ fw.garcia@uniandes.edu.co}
 
   \begin{center}
   \includegraphics[scale=0.16]{OpenMC_logo.png}
-  \captionof{figure}{\footnotesize OpenMC Logo \cite{OpenMC}.}
+  \captionof{figure}{\footnotesize OpenMC Logo. Image retrive from \textbf{Ref.} \cite{OpenMC}.}
   \end{center}
 
 }
 
 
-\headerbox{3. Results}{name=Results,span=2,column=1,below= Abstract}{
+\headerbox{3. Results}{name=Results, span=2,column=1,below= Abstract}{
   Simulations were conducted using uranium oxide fuel with thorium concentrations of \(10\%\) and \(50\%\). The results indicated that increasing the thorium concentration improved the conversion ratio, consistent with findings in \cite{N_Improvement}. However, higher thorium concentrations also presented challenges in maintaining criticality. The results suggest that while higher thorium concentrations can enhance fuel utilization, careful optimization of fuel composition and reactor parameters is essential to ensure stable and efficient reactor operation. \textbf{Fig.} \ref{fig:Th_10} shows the isotopes concentration in the fuel as a function of time for a \(10\%\) thorium concentration. Additional, \textbf{Fig.} \ref{fig:Th_10_r} shows the reactivity as a function of time for the same thorium concentration.
 
   \begin{center}
